[tool.poetry]
name = "glassnode"
version = "0.1.0"
description = ""
authors = ["なるみ <toucans-cutouts0f@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pandas = "^1.4.2"
iso8601 = "^1.0.2"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
